make empty lines as statement delimiter, make sorting of script files numerically instead of lexicographically based