@@ -1,7 +1,10 @@
 package os.db.evolve;
 
 import javax.sql.DataSource;
+import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
@@ -13,14 +16,19 @@ import java.security.NoSuchAlgorithmException;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class DbEvolve {
 
-    private static final String DEFAULT_CLASSPATH_DIRECTORY = "sql";
-    private static final String END_DELIMITER = ";";
+    static final String DEFAULT_CLASSPATH_DIRECTORY = "sql";
+    static final Pattern FILE_VERSION_PATTERN = Pattern.compile("V(\\d+)__.*");
+    static final Comparator<Path> VERSION_COMPARATOR = Comparator.comparingInt(DbEvolve::extractVersionFromFileName);
 
     private final DataSource dataSource;
     private final String classpathDirectory;
@@ -28,44 +36,61 @@ public class DbEvolve {
     private final SqlScriptRepository sqlScriptRepository;
     private final MessageDigest digest;
 
-    public DbEvolve(DataSource dataSource) throws SQLException, NoSuchAlgorithmException {
+    public DbEvolve(DataSource dataSource) {
         this(dataSource, DEFAULT_CLASSPATH_DIRECTORY);
     }
 
-    public DbEvolve(DataSource dataSource, String classpathDirectory) throws SQLException, NoSuchAlgorithmException {
+    public DbEvolve(DataSource dataSource, String classpathDirectory) {
         this.dataSource = dataSource;
         this.classpathDirectory = classpathDirectory;
         this.queryRunner = new QueryRunner(dataSource);
         this.sqlScriptRepository = new SqlScriptRepository(queryRunner);
-        this.digest = MessageDigest.getInstance("SHA-256");
-        createTableIfNotExists();
+        try {
+            this.digest = MessageDigest.getInstance("SHA-256");
+        } catch (NoSuchAlgorithmException e) {
+            throw new MigrationException(e);
+        }
+        createTablesIfNotExist();
     }
 
-    public void migrate() throws IOException, URISyntaxException, SQLException {
-        List<Path> sqlFiles = findAllSqlFiles();
+    public void migrate() {
+        try {
+            List<Path> sqlFiles = findAllSqlFiles();
 
-        for (Path sqlFile : sqlFiles) {
-            migrateSqlFile(sqlFile);
+            for (Path sqlFile : sqlFiles) {
+                migrateSqlFile(sqlFile);
+            }
+        } catch (MigrationException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new MigrationException(e);
         }
     }
 
-    private void createTableIfNotExists() throws SQLException { // does not work with Oracle
-        queryRunner.execute("CREATE TABLE IF NOT EXISTS DB_EVOLVE (name VARCHAR(255) NOT NULL, hash VARCHAR(64) NOT NULL, timestamp TIMESTAMP, PRIMARY KEY (name));");
+    private void createTablesIfNotExist() {
+        try {
+            queryRunner.execute("CREATE TABLE DB_EVOLVE (name VARCHAR(255) NOT NULL, hash VARCHAR(64) NOT NULL, timestamp TIMESTAMP, PRIMARY KEY (name));");
+        } catch (SQLException throwables) {
+            // ignore => assumption table already exist. If not migration will fail anyway.
+        }
     }
 
     private List<Path> findAllSqlFiles() throws URISyntaxException, IOException {
         ClassLoader classLoader = getClass().getClassLoader();
 
         URL resource = classLoader.getResource(classpathDirectory);
+        if (resource == null) {
+            throw new MigrationException(String.format("No migrations found. Directory %s is not on classpath.", classpathDirectory));
+        }
 
         return Files.walk(Paths.get(resource.toURI()))
                 .filter(Files::isRegularFile)
-                .sorted()
+                .sorted(VERSION_COMPARATOR) // FIXME lexographic sorting dow not work with 1_ to 10_
                 .collect(Collectors.toList());
     }
 
     private void migrateSqlFile(Path sqlFile) throws IOException, SQLException {
-        String content = Files.readString(sqlFile, StandardCharsets.UTF_8);
+        byte[] content = Files.readAllBytes(sqlFile);
         String currentHash = hash(content);
 
         Optional<SqlScript> sqlScript = sqlScriptRepository.find(sqlFile.getFileName().toString());
@@ -78,13 +103,37 @@ public class DbEvolve {
             return;
         }
 
-        String[] statements = content.split(END_DELIMITER);
-
         try (Connection connection = dataSource.getConnection();
-             Transaction transaction = new Transaction(connection)) {
+             Transaction transaction = new Transaction(connection);
+             ByteArrayInputStream contentAsStream = new ByteArrayInputStream(content);
+             InputStreamReader inReader = new InputStreamReader(contentAsStream);
+             BufferedReader reader = new BufferedReader(inReader)) {
 
-            for (String statement : statements) {
-                queryRunner.execute(connection, statement.trim());
+            StringBuilder statement = new StringBuilder();
+
+            while (true) {
+                String line = reader.readLine();
+
+                if (line == null || line.trim().isEmpty()) {
+                    if (statement.length() > 0) {
+                        queryRunner.execute(connection, statement.toString().trim());
+                        statement.setLength(0);
+                    }
+
+                    if (line == null) {
+                        break;
+                    }
+
+                    if (line.trim().isEmpty()) {
+                        continue;
+                    }
+                }
+
+                if (line.startsWith("--")) { // skip single line comments
+                    continue;
+                }
+
+                statement.append(" ").append(line);
             }
 
             SqlScript toSave = new SqlScript(sqlFile.getFileName().toString(), currentHash, LocalDateTime.now());
@@ -94,8 +143,16 @@ public class DbEvolve {
         }
     }
 
-    private String hash(String fileContent) {
-        byte[] encodedhash = digest.digest(fileContent.getBytes(StandardCharsets.UTF_8));
+    private static int extractVersionFromFileName(Path path) {
+        Matcher matcher = FILE_VERSION_PATTERN.matcher(path.getFileName().toString());
+        if (!matcher.matches()) {
+            throw new MigrationException(String.format("File name %s does not meet the naming convention 'V<Version>__<Description>.sql'", path.getFileName()));
+        }
+        return Integer.parseInt(matcher.group(1));
+    }
+
+    private String hash(byte[] fileContent) {
+        byte[] encodedhash = digest.digest(fileContent);
         return bytesToHex(encodedhash);
     }
 
